[gd_scene load_steps=10 format=3 uid="uid://n5x7xyf3uv6u"]

[ext_resource type="Script" path="res://Scripts/game_lobby.gd" id="1_l3vr6"]
[ext_resource type="Texture2D" uid="uid://dew66su4ank75" path="res://assets/10059426.jpg" id="2_76jtu"]
[ext_resource type="FontFile" uid="uid://bdv3nir2r7fgo" path="res://assets/fonts/iImong.ttf" id="3_qwf32"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m61q2"]
texture = ExtResource("2_76jtu")
modulate_color = Color(0.36, 0.36, 0.36, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ul7so"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5gvls"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lqnbc"]
bg_color = Color(0.862745, 0.862745, 0.862745, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 15
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_05t5a"]
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 15
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xocpd"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 15
shadow_offset = Vector2(0, 3.41)

[node name="GameLobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l3vr6")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_m61q2")

[node name="LobbyPanel" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(700, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -300.0
offset_right = 350.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="LobbyPanel"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_qwf32")
theme_override_font_sizes/font_size = 48
text = "SW!TCH - Game Lobby"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SessionIdDisplay" type="Label" parent="LobbyPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Session ID: ABCDEF"
horizontal_alignment = 1

[node name="CopyButton" type="Button" parent="LobbyPanel/SessionIdDisplay"]
layout_mode = 2
offset_left = 492.0
offset_right = 630.0
offset_bottom = 37.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_ul7so")
text = "Copy to Clipboard"

[node name="SessionIdInput" type="LineEdit" parent="LobbyPanel"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
placeholder_text = "Enter Session ID to Join"
alignment = 1

[node name="CreateButton" type="Button" parent="LobbyPanel"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_5gvls")
theme_override_styles/hover = SubResource("StyleBoxFlat_lqnbc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_05t5a")
theme_override_styles/normal = SubResource("StyleBoxFlat_xocpd")
text = "Create Game"

[node name="JoinButton" type="Button" parent="LobbyPanel"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_5gvls")
theme_override_styles/hover = SubResource("StyleBoxFlat_lqnbc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_05t5a")
theme_override_styles/normal = SubResource("StyleBoxFlat_xocpd")
text = "Join Game"

[node name="StatusLabel" type="Label" parent="LobbyPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Create a new game or join an existing one."
horizontal_alignment = 1
autowrap_mode = 3

[node name="PlayerList" type="ItemList" parent="LobbyPanel"]
visible = false
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 20
auto_height = true

[node name="ReadyButton" type="Button" parent="LobbyPanel"]
visible = false
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_5gvls")
theme_override_styles/hover = SubResource("StyleBoxFlat_lqnbc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_05t5a")
theme_override_styles/normal = SubResource("StyleBoxFlat_xocpd")
text = "Ready"

[node name="StartButton" type="Button" parent="LobbyPanel"]
visible = false
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_5gvls")
theme_override_styles/hover = SubResource("StyleBoxFlat_lqnbc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_05t5a")
theme_override_styles/normal = SubResource("StyleBoxFlat_xocpd")
text = "Start Game"

[node name="RefreshButton" type="Button" parent="LobbyPanel"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_5gvls")
theme_override_styles/hover = SubResource("StyleBoxFlat_lqnbc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_05t5a")
theme_override_styles/normal = SubResource("StyleBoxFlat_xocpd")
text = "Refresh"

[node name="BackButton" type="Button" parent="LobbyPanel"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_5gvls")
theme_override_styles/hover = SubResource("StyleBoxFlat_lqnbc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_05t5a")
theme_override_styles/normal = SubResource("StyleBoxFlat_xocpd")
text = "Back to Menu"
